@@ -143,34 +143,34 @@ int main(void)
 "						 gconstpointer	b);\n"
 "\n"
 "\n"
-"GSList* g_slist_insert_sorted	(GSList		*list,\n"
-"				 gpointer	 data,\n"
-"				 GCompareFunc	 func);\n"
+"GSList WIN32_DLL *g_slist_insert_sorted	(GSList		*list,\n"
+"						 gpointer	 data,\n"
+"						 GCompareFunc	 func);\n"
 "\n"
-"GSList* g_slist_append		(GSList		*list,\n"
-"				 gpointer	 data);\n"
+"GSList WIN32_DLL *g_slist_append		(GSList		*list,\n"
+"						 gpointer	 data);\n"
 "\n"
-"GSList* g_slist_prepend	(GSList		*list,\n"
-"				 gpointer	 data);\n"
+"GSList WIN32_DLL *g_slist_prepend		(GSList		*list,\n"
+"						 gpointer	 data);\n"
 "\n"
-"GSList* g_slist_remove		(GSList		*list,\n"
-"				 gpointer	 data);\n"
+"GSList WIN32_DLL *g_slist_remove		(GSList		*list,\n"
+"						 gpointer	 data);\n"
 "\n"
-"void	g_slist_foreach		(GSList		*list,\n"
-"				 GFunc		 func,\n"
-"				 gpointer	 user_data);\n"
+"void	WIN32_DLL g_slist_foreach		(GSList		*list,\n"
+"						 GFunc		 func,\n"
+"						 gpointer	 user_data);\n"
 "\n"
-"void	g_slist_free		(GSList		*list);\n"
+"void	WIN32_DLL g_slist_free			(GSList		*list);\n"
 "\n"
-"GSList* g_slist_nth		(GSList		*list,\n"
-"				 guint		n);\n"
+"GSList WIN32_DLL *g_slist_nth		(GSList		*list,\n"
+"					 guint		n);\n"
 "\n"
-"GSList* g_slist_find_custom	(GSList		*list,\n"
-"				 gpointer	data,\n"
-"				 GCompareFunc	func );\n"
+"GSList WIN32_DLL * g_slist_find_custom	(GSList		*list,\n"
+"					 gpointer	data,\n"
+"					 GCompareFunc	func );\n"
 "\n"
-"gint	g_slist_position	(GSList		*list,\n"
-"				 GSList		*llink);\n"
+"gint	WIN32_DLL g_slist_position	(GSList		*list,\n"
+"					 GSList		*llink);\n"
 "\n"
 "typedef struct _GHashTable	GHashTable;\n"
 "\n"
@@ -180,25 +180,25 @@ int main(void)
 "						 gpointer	value,\n"
 "						 gpointer	user_data);\n"
 "\n"
-"gint  g_int_equal (gconstpointer   v,\n"
-"		   gconstpointer   v2);\n"
-"guint g_int_hash  (gconstpointer   v);\n"
+"gint	WIN32_DLL g_int_equal (gconstpointer   v,\n"
+"			       gconstpointer   v2);\n"
+"guint	WIN32_DLL g_int_hash  (gconstpointer   v);\n"
 "\n"
-"GHashTable* g_hash_table_new		(GHashFunc	 hash_func,\n"
+"GHashTable WIN32_DLL *g_hash_table_new	(GHashFunc	 hash_func,\n"
 "					 GCompareFunc	 key_compare_func);\n"
 "\n"
-"void	    g_hash_table_destroy	(GHashTable	*hash_table);\n"
+"void	WIN32_DLL g_hash_table_destroy	(GHashTable	*hash_table);\n"
 "\n"
-"void	    g_hash_table_insert		(GHashTable	*hash_table,\n"
+"void	WIN32_DLL g_hash_table_insert	(GHashTable	*hash_table,\n"
 "					 gpointer	 key,\n"
 "					 gpointer	 value);\n"
 "\n"
-"gpointer    g_hash_table_lookup		(GHashTable	*hash_table,\n"
+"gpointer WIN32_DLL g_hash_table_lookup	(GHashTable	*hash_table,\n"
 "					 gconstpointer	 key);\n"
 "\n"
-"guint	    g_hash_table_foreach_remove	(GHashTable	*hash_table,\n"
-"					 GHRFunc	 func,\n"
-"					 gpointer	 user_data);\n"
+"guint	WIN32_DLL g_hash_table_foreach_remove	(GHashTable	*hash_table,\n"
+"						 GHRFunc	 func,\n"
+"						 gpointer	 user_data);\n"
 "CODE\n" );
 #endif				/* #ifdef HAVE_LIB_GLIB */
 
